# trader-koo

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODEX_SHARED.md  CLAUDE_PASSDOWN_2026-03-17.md  CODEX.md  CODEX_REVIEW.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  SECURITY.md  SUPER_UPGRADE_PLAN.md  V2_PROGRESS.md  agent.md  build.sh  nixpacks.toml  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  start.sh  task10_implementation_summary.md  task13_implementation_summary.md  task16_rbac_implementation_summary.md  task17_implementation_summary.md  task7_verification_summary.md  task8_implementation_summary.md  task9_implementation_summary.md  test_agreement_display.html  test_debate_score.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
examples/: adaptive_compression_demo.py  rate_limiting_demo.py  rbac_integration_example.py
tests/: __init__.py  conftest.py  test_adaptive_compression_integration.py  test_adaptive_compression_thresholds.py  test_admin_auth.py  test_admin_auth_property.py  test_agreement_tier_adjustment.py  test_alert_engine.py  test_app.py  test_audit_integration.py  test_audit_logging.py  test_backend_utils.py  test_backtest_accounting.py  test_bot_commands.py  test_bug_fixes.py  test_calibration_pulse.py  test_catalyst_cross_validation.py  test_config.py  test_cors.py  test_cors_property.py  test_critic.py  test_crypto_aggregator.py  test_crypto_binance_history.py  test_crypto_market_insights.py  test_crypto_service.py  (+40 more)
(+509 files in other folders)
